<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".ui.RegistarFilmeFragment">

    <!-- Título da página -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/title_registar"
        android:textSize="28sp"
        android:textStyle="bold" />

    <!-- Formulário -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/textfield_filme">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:completionThreshold="1"
            android:inputType="text"
            android:textColor="@color/black"
            app:endIconMode="dropdown_menu"
            android:paddingHorizontal="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/textfield_cinema">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/cinemaEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:completionThreshold="1"
            android:inputType="text"
            android:textColor="@color/black"
            app:endIconMode="dropdown_menu"
            android:paddingHorizontal="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/field_avaliacao"
        android:textSize="15sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:max="9"
        android:progress="0"
        android:thumbTint="@color/purple_500"
        android:progressTint="@color/purple_500" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/field_data">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/notesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_notes"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:maxLines="5"
            android:minLines="2"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/photosButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:text="@string/button_addImages" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/images_added"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textInserido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_images_added"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="2dp"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/button_gravar"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonTesteAvatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />


</LinearLayout>