<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingTop="20dp">

            <!-- Elemento de UI para a imagem cartaz -->
            <ImageView
                android:id="@+id/poster_image"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src = "@mipmap/ic_launcher"
                android:contentDescription="@string/movie_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <!-- Elemento de UI para a nome filme -->
                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_title"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Elemento de UI para a data de lançamento -->
                    <TextView
                        android:id="@+id/movie_data_lancamento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:text="@string/launch_date" />

                </LinearLayout>

                <!-- Elemento de UI para a genero filme -->
                <TextView
                    android:id="@+id/movie_genero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="@string/genre" />

                <!-- Elemento de UI para a avaliacao -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/movie_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textStyle="bold"
                        android:text="@string/default_rating"/>

                    <ImageView
                        android:id="@+id/movie_star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_star"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/star_icon" />

                </LinearLayout>

                <!-- Elemento de UI para a avaliação IMDB filme -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:text="@string/imdb_eval"/>

                    <TextView
                        android:id="@+id/movie_avaliacao_IMDB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textStyle="bold"/>

                </LinearLayout>

                <Button
                    android:id="@+id/imdb_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_btn_imdb"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:layout_marginTop="1dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Elemento de UI para a sinopse -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/languages"
                android:textStyle="italic"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/movie_languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/languages"/>

            <!-- Elemento de UI para a sinopse -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/sinopse"
                android:textStyle="italic"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/movie_sinopse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/sinopse"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extra_info"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />

            <!-- Elemento de UI para a nome cinema -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/cinema"
                android:textStyle="italic"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/movie_cinema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/cinema"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_cinema_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="@string/cinema" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=", "
                    android:textAppearance="?android:textAppearanceSmall" />

                <TextView
                    android:id="@+id/movie_cinema_county"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="@string/cinema" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/cinema_eval"
                android:layout_marginVertical="5dp"/>

            <!-- Elemento de UI para a data em que o filme foi visto -->
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow>
                    <TextView
                        android:id="@+id/cinema_rating_cat1"
                        android:padding="8dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/cinema_rating_cat1_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:textAppearanceSmall" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_10"
                            android:textAppearance="?android:textAppearanceSmall" />
                    </LinearLayout>

                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/cinema_rating_cat2"
                        android:padding="8dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/cinema_rating_cat2_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:textAppearanceSmall" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_10"
                            android:textAppearance="?android:textAppearanceSmall" />
                    </LinearLayout>
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/cinema_rating_cat3"
                        android:padding="8dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/cinema_rating_cat3_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:textAppearanceSmall" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_10"
                            android:textAppearance="?android:textAppearanceSmall" />
                    </LinearLayout>
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/cinema_rating_cat4"
                        android:padding="8dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/cinema_rating_cat4_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:textAppearanceSmall" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_10"
                            android:textAppearance="?android:textAppearanceSmall" />
                    </LinearLayout>
                </TableRow>

            </TableLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/seen_date"
                android:textStyle="italic"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/movie_viewed_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/seen_date" />

            <!-- Elemento de UI para a observações -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/movie_observ"
                android:textStyle="italic"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/movie_descicao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/movie_observ" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/photos_list"
                android:textStyle="italic"
                android:layout_marginTop="10dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_imagens"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.DetalheFilmeFragment" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>