<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <!-- Imagem do Filme -->
    <ImageView
        android:id="@+id/filme_imagem"
        android:layout_width="100dp"
        android:layout_height="150dp" />

    <!-- Detalhes do Filme -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="79dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/filme_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/filme_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_date"
            android:textSize="14sp" />

        <!-- Detalhes do Filme -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="0dp"
            android:paddingEnd="0dp">

            <TextView
                android:id="@+id/filme_avaliacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_rating"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/estrela"
                android:layout_width="34dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
